--- a/conf/locale/fr/LC_MESSAGES/packetfence.po
+++ b/conf/locale/fr/LC_MESSAGES/packetfence.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PacketFence\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-04-18 20:01+0000\n"
-"Last-Translator: Antoine Amacher <aamacher@inverse.ca>\n"
+"PO-Revision-Date: 2017-04-19 16:00+0000\n"
+"Last-Translator: oeufdure <fdurand@inverse.ca>\n"
 "Language-Team: French (http://www.transifex.com/inverse/packetfence/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -995,7 +995,7 @@ msgstr "Vous n'êtes pas autorisé à vous enregistrer sur ce reseau."
 
 # html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module.pm
 msgid "release: enabling network"
-msgstr "Activation de l'accès au réseau"
+msgstr "Activer l’accès au réseau"
 
 # lib/pf/web/release.pm
 msgid "release: reopen browser"
