Update i18n source file for pfappserver

--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -10242,7 +10242,7 @@ msgstr ""
 
 # pf::provisioner (Provisioners)
 msgid "sentinelone"
-msgstr ""
+msgstr "SentinelOne"
 
 # pf::provisioner (Provisioners)
 msgid "sepm"
