--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -11,6 +11,21 @@ This is a list of noteworthy changes across releases.
 For more details and developer visible changes see the ChangeLog file.
 For a list of compatibility related changes see the UPGRADE.asciidoc file.
 
+Version X.Y.Z released on 0000-00-00
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+New Features
+++++++++++++
+
+
+Enhancements
+++++++++++++
+
+
+Bug Fixes
++++++++++
+
+
 Version 7.0.0 released on 2017-04-19
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
