NEWS file entry for PR #2268

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -25,6 +25,8 @@ Enhancements
 Bug Fixes
 +++++++++
 
+ * When performing a CoA, we should open a locationlog entry with the new role (#2222)
+
 
 Version 7.0.0 released on 2017-04-19
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
