--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -27,6 +27,7 @@ Bug Fixes
 +++++++++
 
  * When performing a CoA, we should open a locationlog entry with the new role (#2222)
+ * Dashboard metrics are now fetched over https (#2272)
 
 
 Version 7.0.0 released on 2017-04-19
