NEWS file entry for #2259

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -22,6 +22,7 @@ New Features
 Enhancements
 ++++++++++++
 
+ * Add a button to access status from device registration and the other way around
 
 Bug Fixes
 +++++++++
