--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -23,6 +23,7 @@ Enhancements
 ++++++++++++
 
  * Add a button to access status from device registration and the other way around
+ * Added the ability to specify multiple DNS server(s) for domain join configuration (PR #2223)
 
 Bug Fixes
 +++++++++
