--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -38,6 +38,7 @@ Bug Fixes
  * Twilio: "To" phone number is being stripped of any "+" sign (#2296)
  * radiusd: load-balancer fails to start in cluster with eduroam (#2303)
  * Renamed Ubiquity to Ubiquiti (PR #2293)
+ * Set up variable GOPATH correctly while setting up developer environment for go (PR #2319)
 
 
 Version 7.0.0 released on 2017-04-19
