--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -29,6 +29,7 @@ Enhancements
  * Added brands icons to authentication source (i.e Twitter, PayPal etc ..) in the administration interface (PR #2287)
  * Allow pfqueue workers to perform work across multiple queues (PR #2260)
  * Added a way to set time and bandwidth balance in action rule (requires accounting to work) (PR #1936)
+ * Don't display the mobileprovider field when doing SMS authentication with only one carrier enabled (PR #2322)
 
 Bug Fixes
 +++++++++
