--- a/docs/PacketFence_Administration_Guide.asciidoc
+++ b/docs/PacketFence_Administration_Guide.asciidoc
@@ -2161,7 +2161,7 @@ OAuth2 Authentication
 
 NOTE: OAuth2 authentication does not work with Webauth enforcement
 
-NOTE: OAuth authentication will fail by design when previewed through "Connection Profiles"  
+NOTE: OAuth2 authentication will fail by design when previewed through "Connection Profiles"  
 
 The captive portal of PacketFence allows a guest/user to register using his Google, Facebook, LinkedIn, Windows Live, Twitter, Instagram, Pinterest or Github account.
 
