--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+packetfence (7.0.1) unstable; urgency=low
+
+  * Version 7.0.1
+
+ -- Inverse <info@inverse.ca>  Fri, 19 May 2017 12:00:00 -0400
+
+
 packetfence (7.0.0) unstable; urgency=low
 
   * Version 7.0.0
