--- a/docs/PacketFence_Administration_Guide.asciidoc
+++ b/docs/PacketFence_Administration_Guide.asciidoc
@@ -2846,6 +2846,12 @@ Action -
 
     modify_node:  mac, $mac, notes, $notes
 
+Content-Security-Policy (CSP)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Content Security Policy is a security policy enforced to a compliant browser that tells the browser what can be accessed from a generated web page. The default policy is pushed for both the portal and the admin interface and enforces that everything the browser executes comes from within PacketFence, with the exeption of the configured network detection host that is by default Inverse IP address. 
+
+If, for some reason the portal is modified with content that needs to be accessed from PacketFence generated web pages, CSP can be deactivated through "System Configuration->Main Configuration->Advanced->CSP security headers" 
+
 Suricata example:
 -----------------
 
