--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -44,6 +44,8 @@ Bug Fixes
  * Renamed Ubiquity to Ubiquiti (PR #2293)
  * Set up variable GOPATH correctly while setting up developer environment for go (PR #2319)
  * Fix authentication sources ordering issue for portal modules when using the administration interface (#2323)
+ * Fix too large scoping of authentication sources (#2338)
+ * Prevent usage of a 'Null' source in the device registration page (#1784)
 
 
 Version 7.0.0 released on 2017-04-19
